# football_analysis

./: .gitignore
cpp_port/: CMakeLists.txt  README.md
cpp_port/include/football_analysis/: ball_trajectory_filler.hpp  byte_track_lite.hpp  camera_motion_estimator.hpp  homography_transformer.hpp  interfaces.hpp  pipeline.hpp  possession_assigner.hpp  speed_distance_estimator.hpp  types.hpp
cpp_port/src/: ball_trajectory_filler.cpp  byte_track_lite.cpp  camera_motion_estimator.cpp  homography_transformer.cpp  main.cpp  pipeline.cpp  possession_assigner.cpp  speed_distance_estimator.cpp
